General Update. Made popup and changed background.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-primary">Testing 2</h1>
+    <div class="popup is--small">
+        <div class="popup-content">
+            <h1>Test Popup</h1>
+        </div>
+    </div>
+
 </body>
 </html>
