--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <div class="popup is--small">
         <div class="popup-content">
-            <h1>Olá Poia</h1>
+            <h1>Have fun</h1>
+            <button class="btn">Click</button>
         </div>
     </div>
 
